# skootrs

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY-INSIGHTS.yml  SECURITY.md  rust-toolchain  rust-toolchain.toml  shell.nix
.github/workflows/: codeql.yml  releases.yml  rust.yml
docs/design/: project-state-store.md
skootrs-bin/: Cargo.toml  README.md
skootrs-bin/src/: helpers.rs  main.rs
skootrs-lib/: Cargo.toml  README.md
skootrs-lib/src/: lib.rs
skootrs-lib/src/model/: mod.rs
skootrs-lib/src/model/skootrs/: facet.rs
skootrs-lib/src/service/: ecosystem.rs  facet.rs  mod.rs  output.rs  project.rs  repo.rs  source.rs
skootrs-lib/templates/: Dockerfile.goreleaser  README.md  SECURITY.prerelease.md  cifuzz.yml  codeql.yml  dependabot.yml  go.releases.yml  goreleaser.yml  scorecard.yml
skootrs-model/: Cargo.toml  README.md
skootrs-model/src/: lib.rs
skootrs-model/src/cd_events/: mod.rs  repo_created.rs
skootrs-model/src/security_insights/: insights10.rs
skootrs-model/src/skootrs/: facet.rs  label.rs  mod.rs
skootrs-rest/: Cargo.toml  README.md
skootrs-rest/src/: lib.rs
skootrs-rest/src/server/: mod.rs  project.rs  rest.rs
skootrs-statestore/: Cargo.toml  README.md
skootrs-statestore/src/: lib.rs
src/: lib.rs
src/bundle/: bundle.rs  mod.rs
src/config/: mod.rs
src/ecosystem/: ecosystem.rs  go.rs  maven.rs  mod.rs
src/model/: mod.rs
src/model/cd_events/: mod.rs  repo_created.rs
src/model/security_insights/: insights10.rs  mod.rs
src/model/skootrs/: facet.rs  mod.rs
src/models/: mod.rs
src/models/security_insights/: mod.rs
src/project/: mod.rs  project.rs
src/repo/: github.rs  mod.rs  repo.rs
src/server/: mod.rs  project.rs  rest.rs
src/service/: ecosystem.rs  facet.rs  mod.rs  project.rs  repo.rs  source.rs
src/source/: mod.rs  source.rs
src/statestore/: mod.rs
templates/: LICENSE  SECURITY.prerelease.md  cifuzz.yml  codeql.yml  go.gitignore  go.releases.yml  scorecard.yml
