[package]
name = "skootrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive"] }
inquire = "0.6.2"
octocrab = "0.32.0"
regress = "0.7.1"
schemars = { version = "0.8.16", features = ["chrono", "url"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full", "tracing", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-actix-web = "0.7.9"
tracing-subscriber = "0.3"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-redoc = { version = "2.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "2.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
surrealdb = { version = "1.1.1", features = ["kv-rocksdb"] }

[lib]
name = "skootrs"
path = "src/lib.rs"

[[bin]]
name = "skootrs"
path = "src/bin/bin.rs"
