[workspace]
members = [
    "skootrs-bin", 
    "skootrs-lib", 
    "skootrs-model",
    # "skootrs-rest",
    "skootrs-statestore"
]

resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
