[package]
name = "skootrs-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
tracing = "0.1"
skootrs-lib = { path = "../skootrs-lib" }
skootrs-rest = { path = "../skootrs-rest" }
skootrs-statestore = { path = "../skootrs-statestore" }
inquire = "0.6.2"
octocrab = "0.32.0"
tokio = { version = "1.34.0", features = ["full", "tracing", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
serde_json = "1.0.112"
