[package]
name = "skootrs-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
tracing = "0.1"
skootrs-lib = { path = "../skootrs-lib" }
skootrs-rest = { path = "../skootrs-rest" }
skootrs-statestore = { path = "../skootrs-statestore" }
inquire = "0.6.2"
octocrab = "0.32.0"
tokio = { version = "1.34.0", features = ["full", "tracing", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
serde_json = "1.0.112"
skootrs-model = { path = "../skootrs-model" }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.22.0"
tracing-bunyan-formatter = "0.3.9"
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = "0.21.2"
