[package]
name = "skootrs-bin"
version = "0.1.0"
edition = "2021"
description = "This module is for the Skootrs CLI tool binary and helper functions."
license = "Apache-2.0"
repository = "https://github.com/kusaridev/skootrs"


[[bin]]
name = "skootrs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1"
skootrs-lib = { version = "0.1.0", path = "../skootrs-lib" }
skootrs-rest = { version = "0.1.0", path = "../skootrs-rest" }
skootrs-statestore = { version = "0.1.0", path = "../skootrs-statestore" }
inquire = "0.6.2"
octocrab = "0.32.0"
tokio = { version = "1.34.0", features = ["full", "tracing", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
serde_json = "1.0.116"
skootrs-model = { version = "0.1.0", path = "../skootrs-model" }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.22.0"
tracing-bunyan-formatter = "0.3.9"
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = "0.21.2"
serde_yaml = "0.9.32"
reqwest = "0.11.24"
base64 = "0.22.0"
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
serde = "1.0.197"
strum = "0.26.2"

[build-dependencies]
clap_mangen = "0.2.20"
