[package]
name = "skootrs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.33.3"
serde_json = "1.0.112"
serde_yaml = "0.9.32"
serde = { version = "1.0.193", features = ["derive"] }
utoipa = { version = "4.1.0" }
chrono = { version = "0.4.31", features = ["serde"] }
askama = "0.12.1"
schemars = { version = "0.8.16", features = ["chrono", "url"] }
tracing = "0.1"
futures = "0.3.30"
skootrs-model = { path = "../skootrs-model" }
sha2 = "0.10.8"
url = "2.5.0"
base64 = "0.21.7"

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
