[package]
name = "skootrs-lib"
version = "0.1.0"
edition = "2021"
description = "This module contains most of the core functionality for Skootrs. It contains the code to interact with repo hosts, generate files, manage projects, etc."
license = "Apache-2.0"
repository = "https://github.com/kusaridev/skootrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.33.3"
serde_json = "1.0.112"
serde_yaml = "0.9.32"
serde = { version = "1.0.193", features = ["derive"] }
utoipa = { version = "4.1.0" }
chrono = { version = "0.4.31", features = ["serde"] }
askama = "0.12.1"
schemars = { version = "0.8.16", features = ["chrono", "url"] }
tracing = "0.1"
futures = "0.3.30"
skootrs-model = { version = "0.1.0", path = "../skootrs-model" }
sha2 = "0.10.8"
url = "2.5.0"
base64 = "0.22.0"
reqwest = "0.12.3"

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
