[package]
name = "skootrs-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.112"
serde = { version = "1.0.193", features = ["derive"] }
utoipa = { version = "4.1.0" }
chrono = { version = "0.4.31", features = ["serde"] }
schemars = { version = "0.8.16", features = ["chrono", "url"] }
regress = "0.9.1"
url = "2.5.0"
strum = { version = "0.26.1", features = ["derive"] }

[lints]
workspace = true

[features]
openapi = [] 
