[package]
name = "skootrs-model"
version = "0.1.0"
edition = "2021"
description = "This module contains the various data structures used by the other Skootrs modules. This is also setup to make it easy to generate schemas from this code for the purposes of easily implementing Skootrs API compliant clients in other languages and systems."
license = "Apache-2.0"
repository = "https://github.com/kusaridev/skootrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.193", features = ["derive"] }
utoipa = { version = "4.1.0" }
chrono = { version = "0.4.31", features = ["serde"] }
schemars = { version = "0.8.16", features = ["chrono", "url"] }
regress = "0.9.1"
url = "2.5.0"
strum = { version = "0.26.2", features = ["derive"] }

[lints]
workspace = true

[features]
openapi = [] 
