[package]
name = "skootrs-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-actix-web = "0.7.9"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-redoc = { version = "2.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "2.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
actix-web = "4.4.1"
serde_json = "1.0.112"
tokio = { version = "1.34.0", features = ["full", "tracing", "macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
skootrs-lib = { path = "../skootrs-lib" }
skootrs-model = { path = "../skootrs-model" }
opentelemetry-jaeger = "0.20.0"
opentelemetry = "0.21.0"
tracing-subscriber = "0.3.18"
tracing-bunyan-formatter = "0.3.9"
skootrs-statestore = { path = "../skootrs-statestore" }