[package]
name = "skootrs-rest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "This is an experimental module is for a REST API for Skootrs."
repository = "https://github.com/kusaridev/skootrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-actix-web = "0.7.9"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-redoc = { version = "2.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "2.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
actix-web = "4.4.1"
serde_json = "1.0.112"
tokio = { version = "1.34.0", features = ["full", "tracing", "macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
skootrs-lib = { version = "0.1.0", path = "../skootrs-lib" }
skootrs-model = { version = "0.1.0", path = "../skootrs-model", features = ["openapi"] }
skootrs-statestore = { version = "0.1.0", path = "../skootrs-statestore" }