[package]
name = "skootrs-statestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.1.1", features = ["kv-rocksdb"] }
skootrs-lib = { path = "../skootrs-lib" }
skootrs-model = { path = "../skootrs-model" }
serde_json = "1.0.114"
