[package]
name = "skootrs-statestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skootrs-lib = { version = "0.1.0", path = "../skootrs-lib" }
skootrs-model = { version = "0.1.0", path = "../skootrs-model" }
serde_json = "1.0.114"
